Fixed playlist table alignment

--- a/styles.css
+++ b/styles.css
@@ -18,14 +18,14 @@ header, footer {
 #header-buttons {
     display: flex;
     justify-content: flex-start;
-    margin-left: 14.5%;
+    margin-left: 21.5%;
 }
 
 /* Main title  */
 h1 {
     display: flex;
     justify-content: flex-start;
-    margin-left: 15%;
+    margin-left: 22.5%;
     margin-bottom: -10px;
 }
 
@@ -33,7 +33,7 @@ h1 {
 #creators {
     display: flex;
     justify-content: flex-start;
-    margin-left: 15.2%;
+    margin-left: 22.5%;
     margin-bottom: 30px;
 }
 
@@ -113,13 +113,14 @@ th {
 
 /* Reduce width of title header and its cell*/
 #title-th,
-#search-results td:nth-child(1) {
+#search-results td:nth-child(1),
+#playlist-view td:nth-child(1) {
     width: 30%; 
 }
 
 /* playlist view table */
 #playlist-view table {
-    width: 110%;
+    width: 100%;
     margin-top: 10px;
     border-collapse: collapse;
 }
